# sway-applications

./: CHANGELOG.md  Cargo.toml  README.md  fuel-toolchain.toml
.devops/.template/: .gitignore  Cargo.toml
.devops/.template/template-contract/: Cargo.toml
.devops/.template/tests/utils/: setup.rs
.github/workflows/: ci.yml
AMM/: Cargo.toml  Forc.toml
AMM/AMM-contract/: Cargo.toml
AMM/atomic-add-liquidity/: Cargo.toml
AMM/exchange-contract/: Cargo.toml
AMM/malicious-implementation/: Forc.toml
AMM/swap-exact-input/: Cargo.toml
AMM/swap-exact-output/: Cargo.toml
AMM/test-utils/: Cargo.toml
AMM/test-utils/src/: interface.rs
AMM/tests/: harness.rs
AMM/tests/amm_contract/functions/: add_pool.rs  initialize.rs  pool.rs
AMM/tests/amm_contract/utils/: mod.rs
AMM/tests/atomic_add_liquidity/cases/: revert.rs  success.rs
AMM/tests/atomic_add_liquidity/utils/: mod.rs
AMM/tests/exchange_contract/functions/: add_liquidity.rs  balance.rs  constructor.rs  deposit.rs  pool_info.rs  preview_add_liquidity.rs  preview_swap_exact_input.rs  preview_swap_exact_output.rs  remove_liquidity.rs  swap_exact_input.rs  swap_exact_output.rs  withdraw.rs
AMM/tests/exchange_contract/utils/: mod.rs
AMM/tests/swap_exact_input/cases/: revert.rs  success.rs
AMM/tests/swap_exact_input/utils/: mod.rs
AMM/tests/swap_exact_output/cases/: revert.rs  success.rs
AMM/tests/swap_exact_output/utils/: mod.rs
AMM/tests/test_utils/: paths.rs  setup.rs
DAO/: Cargo.toml
DAO/DAO-contract/: Cargo.toml
DAO/DAO-contract/src/: data_structures.sw
DAO/DAO-contract/tests/utils/: setup.rs
DAO/tests/utils/: setup.rs
NFT/: Cargo.toml  README.md  fuel-toolchain.toml  package.json
NFT/NFT-contract/: Cargo.toml  Forc.toml
NFT/NFT-contract/src/: errors.sw  main.sw
NFT/NFT-contract/tests/utils/: interface.rs  setup.rs
NFT/src/: queryKeys.ts
NFT/src/components/: ExternalFaucet.tsx  Layout.tsx  NavMenu.tsx
NFT/src/contract-types/: contract-ids.json
NFT/src/contract-types/contracts/: NFTContractAbi.hex.ts
NFT/src/hooks/: useCreateNFT.ts  useMint.ts
NFT/src/pages/: index.tsx
NFT/src/pages/api/: metadata.ts
NFT/src/pages/nft/: create.tsx  faucet.tsx  index.tsx
NFT/src/pages/src20token/: index.tsx
NFT/tests/utils/: setup.rs
OTC-swap-predicate/: Cargo.toml
OTC-swap-predicate/swap-predicate/: Cargo.toml
OTC-swap-predicate/swap-predicate/src/: main.sw
OTC-swap-predicate/swap-predicate/tests/utils/: mod.rs
OTC-swap-predicate/tests/utils/: mod.rs
TicTacToe/: Cargo.toml
TicTacToe/tests/utils/: setup.rs
TicTacToe/tictactoe-contract/: Cargo.toml
airdrop/: Cargo.toml
airdrop/airdrop-contract/: Cargo.toml
airdrop/airdrop-contract/tests/utils/: setup.rs
airdrop/tests/utils/: setup.rs
counter-script/: Cargo.toml
counter-script/interaction_script/tests/: harness.rs
counter-script/tests/: harness.rs
english-auction/: Cargo.toml
english-auction/auction-contract/: Cargo.toml
english-auction/tests/utils/: setup.rs
escrow/: Cargo.toml
escrow/escrow-contract/: Cargo.toml
escrow/tests/utils/: setup.rs
fractional-NFT/: Cargo.toml  README.md
fractional-NFT/f-NFT-contract/: Cargo.toml  Forc.toml
fractional-NFT/f-NFT-contract/src/: main.sw
fractional-NFT/test-artifacts/src/: main.sw
fractional-NFT/tests/utils/: setup.rs
fundraiser/: Cargo.toml
fundraiser/fundraiser-contract/: Cargo.toml
fundraiser/tests/utils/: setup.rs
multisig-wallet/multisig-contract/src/: utils.sw
name-registry/: Cargo.toml
name-registry/registry-contract/: Cargo.toml
name-registry/tests/utils/: setup.rs
native-asset/: Cargo.toml  README.md
native-asset/native-asset-contract/: Cargo.toml  Forc.toml
native-asset/native-asset-contract/src/: errors.sw  main.sw
native-asset/tests/utils/: setup.rs
oracle/: Cargo.toml
oracle/oracle-contract/: Cargo.toml
oracle/oracle-node/: Cargo.toml
oracle/oracle-node/src/: lib.rs  main.rs
oracle/tests/: harness.rs  utils.rs
oracle/tests/oracle_contract_tests/: owner.rs  price.rs  set_price.rs
oracle/tests/oracle_node_tests/: run.rs
oracle/utils/: Cargo.toml
oracle/utils/src/: lib.rs
timelock/: Cargo.toml
timelock/tests/utils/: setup.rs
timelock/timelock-contract/: Cargo.toml
token-SRC20/: README.md
token-SRC20/frontend-wip/: fuel-toolchain.toml
token-SRC20/token-src20-contract/: Forc.toml
token-SRC20/token-src20-contract/src/: utility_functions.sw
token-SRC20/token_contract_src20/src/: main.sw
(+25 files in other folders)
