[workspace]
resolver = "2"
members = [
    # ".devops.template",
    # "airdrop",
    "AMM",
    # "counter-script",
    # "DAO",
    # "english-auction",
    # "escrow",
    # "fractional-NFT",
    # "fundraiser",
    # "name-registry",
    # "native-asset",
    # "NFT",
    # "oracle",
    # "OTC-swap-predicate",
    # "TicTacToe",
    # "timelock",
]
exclude = [
    ".devops/aurora",
]

[workspace.dependencies]
fuels = { version= "0.62.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }