[package]
name = "swap-predicate"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { workspace = true }
tokio = { workspace = true }

[[test]]
harness = true
name = "OTC_swap_predicate_integration_tests"
path = "tests/harness.rs"
