[package]
name = "oracle-node"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
dotenv = "0.15.0"
fuels = { workspace = true }
futures = "0.3"
itertools = "0.11"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true }

[[bin]]
name = "oracle-node"
path = "oracle-node/src/main.rs"

[lib]
name = "oracle_node"
path = "oracle-node/src/lib.rs"

[[test]]
name = "harness"
path = "tests/harness.rs"

