[package]
name = "swap-exact-output"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dev-dependencies]
fuels = { workspace = true }
test-utils = { path = "../test-utils" }
tokio = { workspace = true }

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"
