[package]
name = "airdrop-contract"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuel-merkle = { version = "0.33.0" }
fuels = { workspace = true }
sha2 = { version = "0.10.7" }
tokio = { workspace = true }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
